[package]
name = "bitnet-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
anyhow = "1.0.80"
candle-core = { git = "https://github.com/huggingface/candle.git" }
candle-datasets = { git = "https://github.com/huggingface/candle.git" }
candle-einops = { git = "https://github.com/tomsanbear/candle-einops", branch = "latest-candle" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }
clap = "4.5.1"
crossterm = "0.27.0"
cudarc = { version = "0.10.0", optional = true }
half = "2.4.0"
hf-hub = "0.3.2"
intel-mkl-src = { version = "0.8.1", optional = true }
kdam = "0.5.1"
num_cpus = "1.16.0"
pretty_trace = "0.5.23"
rand = "0.8.5"
ratatui = "0.26.1"
serde = "1.0.197"
tokenizers = "0.15.2"
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.18"

[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }


[features]
default = []
accelerate = [
    "dep:accelerate-src",
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "dep:bindgen_cuda",
]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = [
    "dep:intel-mkl-src",
    "candle-core/mkl",
    "candle-nn/mkl",
    "candle-transformers/mkl",
]
nccl = ["cuda", "cudarc/nccl"]
metal = ["candle-core/metal", "candle-nn/metal"]
